<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/modo"
            android:layout_marginLeft="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/moduo"
            android:textColorHint="@color/black"
            android:textSize="@dimen/setting_connect_title_moduo"
            android:gravity="center"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="@dimen/setting_connect_item_width"
            android:layout_height="match_parent"
            android:text="@string/server"
            android:textSize="22sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_et_server"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="@dimen/setting_connect_item_width"
            android:layout_height="match_parent"
            android:text="@string/port"
            android:textSize="22sp"
            android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/id_et_port"/>

    </LinearLayout>

    <Button
        android:layout_width="@dimen/setting_connect_button_width"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn_save"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/save_connect"
        android:textSize="@dimen/setting_connect_button_text"
        android:background="@color/button_orange"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="@dimen/setting_connect_button_width"
        android:layout_height="wrap_content"
        android:id="@+id/id_btn_delete"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/delete_connect"
        android:textSize="@dimen/setting_connect_button_text"
        android:background="@color/button_green"
        android:layout_margin="20dp"/>

</LinearLayout>